src/objects/MyCustomObj__c.object
<CustomObject>
    <description>This obj is my Study purpose</description>
    <fields>
        <fullName>CheckBox_Field__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CheckBox Field</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>EncryField__c</fullName>
        <label>EncryField</label>
        <length>100</length>
        <maskChar>asterisk</maskChar>
        <maskType>nino</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>Pick1__c</fullName>
        <label>Pick1</label>
        <picklist>
            <controllingField>CheckBox_Field__c</controllingField>
            <picklistValues>
                <fullName>abc</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hello</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>uu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>xyz</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>yuu</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Pick2__c</fullName>
        <label>Pick2</label>
        <picklist>
            <controllingField>Pick1__c</controllingField>
            <picklistValues>
                <fullName>455</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>456</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>667</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>RichTextArea__c</fullName>
        <label>RichTextArea</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>g1__c</fullName>
        <globalPicklist>Global_1</globalPicklist>
        <label>g1</label>
        <type>Picklist</type>
    </fields>
    <label>MyCustomObj</label>
    <nameField>
        <label>MyCustomObj Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MyCustomObjs</pluralLabel>
    <recordTypes>
        <fullName>Custom_Record_Type</fullName>
        <active>true</active>
        <label>Custom Record Type</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <sharingReasons>
        <fullName>r1__c</fullName>
        <label>r1</label>
    </sharingReasons>
    <validationRules>
        <fullName>Test_Rich_Text_Area_value</fullName>
        <active>true</active>
        <description>Test</description>
        <errorConditionFormula>len(RichTextArea__c) &lt;0</errorConditionFormula>
        <errorMessage>RichTextArea__c len should not be &lt; 0</errorMessage>
    </validationRules>
</CustomObject>